--- a/D3/scatter/style.css
+++ b/D3/scatter/style.css
@@ -15,7 +15,7 @@
   display: none;
 }
 
-#tooltip .metric-date {
+#tooltip .metric-date .metric-humidity {
   text-decoration: underline;
 }
 .axis{
