--- a/angular13demos/src/app/app.component.html
+++ b/angular13demos/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container"> -->
   <!-- <h1 class="bg-primary">The Demo App</h1>
   <hr>
   <h4>NAME: {{name}}</h4>
@@ -15,5 +15,47 @@
   <!-- <app-twoway></app-twoway> -->
   <!-- <app-direcives (childEvent)="num=$event" [childnumbers]="numbers"></app-direcives>
   <h2>Value from Chils:{{num}}</h2> -->
-  <app-pipes></app-pipes>
-</div>
+  <!-- <app-pipes></app-pipes> -->
+  <!-- <app-empl-list></app-empl-list>
+  <hr>
+  <app-emp-detail></app-emp-detail> -->
+  <!-- <app-intercepts></app-intercepts> -->
+  <!-- <span appShark>Fin!!</span>
+  <div appShark>Finn</div>
+  <input #myInput placeholder="UR fav Sea Creature">
+  <hr>
+  <app-pup></app-pup> -->
+  <!-- <div style="text-align: center;">
+    <h1>Routing And Navigation</h1>
+  </div>
+  <nav>
+    <a routerLink="/departments" routerLinkActive="active">Departments</a>
+    <a routerLink="/employees" routerLinkActive="active">Employees</a>
+  </nav>
+  <router-outlet></router-outlet> -->
+  <!-- Any routed view is rendered here -->
+  <!-- <app-department-list></app-department-list>
+  <div>
+    <label>DOB: </label>
+    <input type="date" #dobInput (blur)="calculateAge()">
+  </div>
+  <div>
+    <label>AGE: </label>
+    <input type="text" #ageInput>
+  </div>
+  <div>
+    {{outsideComp.display()}} -->
+    <!-- {{d}}
+  </div> -->
+  <div style="margin: 20px auto; width: 780px;">
+    <div class="app-component">
+      <h2>App Component</h2>
+      <p>This is <b>app</b> Component</p>
+      <button>Button</button>
+    </div>
+    <div class="component-container">
+      <app-app-com1></app-app-com1>
+      <app-app-com2></app-app-com2>
+    </div>
+  </div>
+<!-- </div> -->
